<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@drawable/background_gradient"
    tools:context=".view.ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_na_senha"
        android:textSize="60dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_o_seu_e_mail_para_recuperar_a_senha_voc_receber_uma_mensagem_contendo_as_instru_es_para_recupera_o"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginBottom="40dp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_inputbox"
        android:hint="@string/email_hint"
        android:padding="10dp"
        android:textColorHint="#546E7A"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="1sp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_blue"/>

</LinearLayout>
