<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="24dp"
    tools:context=".view.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="App Logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Name Field -->
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_inputbox"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="18sp"
                app:layout_constraintWidth_percent="0.8" />

            <!-- Email Field -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_inputbox"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="18sp"
                app:layout_constraintWidth_percent="0.8" />

            <!-- Phone Field -->
            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_inputbox"
                android:hint="@string/tel_hint"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="18sp"
                app:layout_constraintWidth_percent="0.8" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_inputbox"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="18sp"
                app:layout_constraintWidth_percent="0.8" />

            <!-- Confirm Password Field -->
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_inputbox"
                android:hint="@string/confirmPassword_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="18sp"
                app:layout_constraintWidth_percent="0.8" />

        </LinearLayout>
    </ScrollView>

    <!-- Register Button -->
    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_register_text"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
